Correctif des mots accueil et des titres collapse page hosing

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -131,6 +131,7 @@
                 font-size: 12px;
                 color: $primary;
                 text-decoration: none;
+                text-transform: uppercase;
 
                 &:hover {
                     text-decoration: underline;
