--- a/src/styles/housing.scss
+++ b/src/styles/housing.scss
@@ -144,7 +144,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        width: 71.713%;
+        width: 100%;
         margin: auto;
         height: 100%;
         align-items: flex-start;
